test/corpus/declarations.txt
================================================================================
Opaque type (no body)
================================================================================

module main

type Step

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (type_declaration
    (identifier)))

================================================================================
Func stub (no body)
================================================================================

module main

func deploy(name: string, targets: list[Target]) block[Deploy]

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (func_declaration
    (identifier)
    (parameter_list
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier))))
      (field_definition
        (identifier)
        (generic_type
          (identifier)
          (named_type
            (dotted_name
              (identifier))))))
    (generic_type
      (identifier)
      (named_type
        (dotted_name
          (identifier))))))

================================================================================
Decl stub with dotted name
================================================================================

module main

decl posix.copy(src: Source, dest: string) Step

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (decl_declaration
    (dotted_name
      (identifier)
      (identifier))
    (parameter_list
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier))))
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier)))))
    (named_type
      (dotted_name
        (identifier)))))

================================================================================
Decl with body and self
================================================================================

module main

decl create_user(name: string) Step {
  posix.user { name = self.name }
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (decl_declaration
    (dotted_name
      (identifier))
    (parameter_list
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier)))))
    (named_type
      (dotted_name
        (identifier)))
    (block
      (expression_statement
        (struct_literal
          (dotted_name
            (identifier)
            (identifier))
          (field_initializer
            (identifier)
            (selector_expression
              (self)
              (identifier))))))))

================================================================================
Enum multiline
================================================================================

module main

enum ServiceState {
  running
  stopped
  restarted
  reloaded
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (enum_declaration
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Let with optional type annotation
================================================================================

module main

let shell: string? = none

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (optional_type
      (named_type
        (dotted_name
          (identifier))))
    (none)))

================================================================================
Func with generic return type
================================================================================

module main

func packages(extra: list[string] = []) list[string] {
  return ["curl"] + extra
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (func_declaration
    (identifier)
    (parameter_list
      (field_definition
        (identifier)
        (generic_type
          (identifier)
          (named_type
            (dotted_name
              (identifier))))
        (list_literal)))
    (generic_type
      (identifier)
      (named_type
        (dotted_name
          (identifier))))
    (block
      (return_statement
        (binary_expression
          (list_literal
            (string
              (string_content)))
          (identifier))))))

================================================================================
Multiple imports
================================================================================

module main

import "std"
import "std/posix"
import "std/container"
import "codeberg.org/scampi-dev/modules/unifi"

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (import_declaration
    (string
      (string_content)))
  (import_declaration
    (string
      (string_content)))
  (import_declaration
    (string
      (string_content)))
  (import_declaration
    (string
      (string_content))))

================================================================================
Attribute type declaration (marker)
================================================================================

module main

type @nonempty {}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (attribute_type_declaration
    (identifier)
    (attribute_type_body)))

================================================================================
Attribute type declaration with fields
================================================================================

module main

type @pattern {
  regex: string
}

type @path {
  absolute:   bool = false
  must_exist: bool = false
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (attribute_type_declaration
    (identifier)
    (attribute_type_body
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier))))))
  (attribute_type_declaration
    (identifier)
    (attribute_type_body
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier)))
        (false))
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier)))
        (false)))))

================================================================================
Decl with prefix attributes on params
================================================================================

module main

decl posix.copy(
  src:  Source,
  @std.path(absolute=true) dest: string,
  @std.nonempty owner: string?,
  @std.filemode perm: string = "0644",
) Step

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (decl_declaration
    (dotted_name
      (identifier)
      (identifier))
    (parameter_list
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier))))
      (field_definition
        (attribute
          (dotted_name
            (identifier)
            (identifier))
          (attribute_arguments
            (attribute_named_argument
              name: (identifier)
              value: (true))))
        (identifier)
        (named_type
          (dotted_name
            (identifier))))
      (field_definition
        (attribute
          (dotted_name
            (identifier)
            (identifier)))
        (identifier)
        (optional_type
          (named_type
            (dotted_name
              (identifier)))))
      (field_definition
        (attribute
          (dotted_name
            (identifier)
            (identifier)))
        (identifier)
        (named_type
          (dotted_name
            (identifier)))
        (string
          (string_content))))
    (named_type
      (dotted_name
        (identifier)))))

================================================================================
Attribute with regex containing dollar
================================================================================

module main

decl posix.firewall(
  @std.pattern(regex="^[0-9]+$") port: string,
) Step

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (decl_declaration
    (dotted_name
      (identifier)
      (identifier))
    (parameter_list
      (field_definition
        (attribute
          (dotted_name
            (identifier)
            (identifier))
          (attribute_arguments
            (attribute_named_argument
              name: (identifier)
              value: (string
                (string_content)))))
        (identifier)
        (named_type
          (dotted_name
            (identifier)))))
    (named_type
      (dotted_name
        (identifier)))))

================================================================================
Pub type declaration
================================================================================

module main

pub type Config {
  name: string
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (type_declaration
    (identifier)
    (type_body
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier)))))))

================================================================================
Pub func declaration
================================================================================

module main

pub func greet(name: string) string {
  return "hello " + name
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (func_declaration
    (identifier)
    (parameter_list
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier)))))
    (named_type
      (dotted_name
        (identifier)))
    (block
      (return_statement
        (binary_expression
          (string
            (string_content))
          (identifier))))))

================================================================================
Pub let declaration
================================================================================

module main

pub let version = "1.0"

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (let_declaration
    (identifier)
    (string
      (string_content))))

================================================================================
Pub enum declaration
================================================================================

module main

pub enum Color {
  red
  green
  blue
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (enum_declaration
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Pub decl declaration
================================================================================

module main

pub decl posix.copy(src: Source, dest: string) Step

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (identifier))
  (decl_declaration
    (dotted_name
      (identifier)
      (identifier))
    (parameter_list
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier))))
      (field_definition
        (identifier)
        (named_type
          (dotted_name
            (identifier)))))
    (named_type
      (dotted_name
        (identifier)))))
